--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "--experimental-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -18,10 +19,13 @@
     "next": "15.0.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "sonner": "^1.7.1"
   },
   "devDependencies": {
     "eslint": "^8",
     "eslint-config-next": "15.0.4"
   }
+  
 }
